--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>0001</title>
+  <title>Orbit Animation with CTA</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <div id="bm"> <div id="animation-container"></div></div>
+  <div id="animation-container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
   <script src="script.js"></script>
